startup: remove JAVA_TOOL_OPTIONS hack, rely solely on --configure-on-demand